--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="./dist/app.js" defer></script>
+    <script defer src="./dist/app.js"></script>
 </head>
-<body>
 
+<body>
+    <div id="app"></div>
 </body>
+
 </html>
