--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script defer src="./dist/app.js"></script>
+  <meta charset="UTF-8" />
+  <title>Title</title>
+  <script defer src="./dist/app.js"></script>
 </head>
 
 <body>
-    <div id="app"></div>
+  <div id="app"></div>
 </body>
 
 </html>
