--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
   <div id="app"></div>
   <button>Click me!</button>
+  <form>
+    <input type="text" id="title" placeholder="Course Title">
+    <input type="text" id='price' placeholder="Course price">
+    <button type="submit">Submit</button>
+  </form>
 </body>
 
 </html>
